# assimp-python-binding

./: .gitmodules  CMakeLists.txt  pyproject.toml
.github/workflows/: build-wheels.yml  daily-summary.yml  main-checkin.yml
src/: assimp_export.cpp  main.cpp
src/assimp_python_binding/: __init__.py  __init__.pyi
