[project]
name = "assimp-python-binding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ruiming Guo", email = "raymond@qingnan.tech" }
]
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

# 安装组件
install.components = ["python"]
# 包含动态库
wheel.install-dir = "assimp_export"
wheel.packages = ["python/assimp_export"]

[tool.scikit-build.cmake.define]
BUILD_SHARED_LIBS = "OFF"
ASSIMP_BUILD_ASSIMP_TOOLS = "OFF"
ASSIMP_BUILD_TESTS = "OFF"
ASSIMP_BUILD_SAMPLES = "OFF"
ASSIMP_INSTALL = "OFF"
ASSIMP_WARNINGS_AS_ERRORS = "OFF"

# 编译 USD 导入器（依赖 tinyusdz）和所有导出器
ASSIMP_BUILD_USD_IMPORTER = "ON"
ASSIMP_NO_EXPORT = "OFF"
